--- a/scripts/survival_network_meta_analysis.Rmd
+++ b/scripts/survival_network_meta_analysis.Rmd
@@ -1,8 +1,17 @@
-
 ---
-title: "Survival and Network Meta-Analysis Example"
+title: "Simulation and Network Meta-Analysis of Survival Data"
 author: "Yolande Tra"
-output: html_document
+date: "`r format(Sys.Date(), '%B %d, %Y')`"
+output: 
+  html_document:
+    toc: true
+    toc_depth: 2
+    number_sections: true
+    theme: readable
+    highlight: tango
+    fig_caption: true
+    code_folding: hide
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
